--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ OWNER=
 #DL_STUFF=
 
 # Channel id , message id, sticker id , Bool, codec name (and quality) for forward channel
-#FCHANNEL=
-#FCHANNEL_STAT=
+FCHANNEL=
+FCHANNEL_STAT=
 #FSTICKER=
 #FBANNER=
 #FCODEC=
@@ -56,5 +56,5 @@ DUMP_LEECH=False
 #ALLOW_ACTION=
 
 # if not added defaults to original repo
-#UPSTREAM_REPO=
-#UPSTREAM_BRANCH=
+UPSTREAM_REPO=https://github.com/Salxchange/FZX-Super-Encoder
+UPSTREAM_BRANCH=
