--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
-BOT_TOKEN=
-OWNER=
+BOT_TOKEN=6837915856:AAFGve11Guxd-kfQN6BwqxsDtLLVMf-4AjM
+OWNER=1966867320
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
@@ -25,8 +25,8 @@ OWNER=
 #DL_STUFF=
 
 # Channel id , message id, sticker id , Bool, codec name (and quality) for forward channel
-FCHANNEL=
-FCHANNEL_STAT=
+FCHANNEL=-1002017061111
+FCHANNEL_STAT=https://t.me/c/2017061111/5
 #FSTICKER=
 #FBANNER=
 #FCODEC=
@@ -56,5 +56,5 @@ DUMP_LEECH=False
 #ALLOW_ACTION=
 
 # if not added defaults to original repo
-UPSTREAM_REPO=https://github.com/Salxchange/FZX-Super-Encoder
-UPSTREAM_BRANCH=
+UPSTREAM_REPO=https://github.com/Salxchange/FZX-Auto-Encoder
+UPSTREAM_BRANCH=FZX-480p
