--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ OWNER=1966867320
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
 
-#FFMPEG=
+FFMPEG=ffmpeg -i "{}" -preset superfast -c:v libx265 -s 640x360 -x265-params 'bframes=8:psy-rd=1:ref=3:aq-mode=3:aq-strength=0.8:deblock=1,1' -pix_fmt yuv420p -crf 30 -c:a libopus -b:a 32k -c:s copy -map 0 -ac 2 -ab 32k -vbr 2 -level 3.1 -threads 5 -metadata title='FZXAnime [t.me/FZXAnime]' -metadata author='𝖥𝖹𝖷𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:a title='𝖥𝖹𝖷 𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:v title='ENCODED_BY [รíӀҽղԵ ժҽʍօղ]' "{}"
 #TEMP_USERS
 #THUMBNAIL=
 #CACHE_DL=
