--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ FFMPEG=ffmpeg -i "{}" -preset superfast -c:v libx265 -s 640x360 -x265-params 'bf
 
 # Channel id , message id, sticker id , Bool, codec name (and quality) for forward channel
 FCHANNEL=-1002017061111
-FCHANNEL_STAT=https://t.me/c/2017061111/5
+FCHANNEL_STAT=5
 #FSTICKER=
 #FBANNER=
 #FCODEC=
