--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@
 
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
-BOT_TOKEN=
-OWNER=
+BOT_TOKEN=6937213583:AAG6Ck5kp-GWBFs9oJI_ZHUvumvsYPFzmRU
+OWNER=1785065025
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
 
-#FFMPEG=ffmpeg -i "{}" -preset superfast -c:v libx265 -s 1920x1080 -x265-params 'bframes=8:psy-rd=1:ref=3:aq-mode=3:aq-strength=0.8:deblock=1,1' -pix_fmt yuv420p -crf 30 -c:a libopus -b:a 32k -c:s copy -map 0 -ac 2 -ab 32k -vbr 2 -level 3.1 -threads 5 -metadata title='FZXAnime [t.me/FZXAnime]' -metadata author='𝖥𝖹𝖷𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:a title='𝖥𝖹𝖷 𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:v title='ENCODED_BY [รíӀҽղԵ ժҽʍօղ]' "{}"
+#FFMPEG=ffmpeg -i "{}" -preset superfast -c:v libx265 -s 854x480 -x265-params 'bframes=8:psy-rd=1:ref=3:aq-mode=3:aq-strength=0.8:deblock=1,1' -pix_fmt yuv420p -crf 30 -c:a libopus -b:a 32k -c:s copy -map 0 -ac 2 -ab 32k -vbr 2 -level 3.1 -threads 5 -metadata title='FZXAnime [t.me/FZXAnime]' -metadata author='𝖥𝖹𝖷𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:a title='𝖥𝖹𝖷 𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:v title='ENCODED_BY [รíӀҽղԵ ժҽʍօղ]' "{}"
 #TEMP_USERS
 #THUMBNAIL=
 #CACHE_DL=
