--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
 BOT_TOKEN=6937213583:AAG6Ck5kp-GWBFs9oJI_ZHUvumvsYPFzmRU
-OWNER=1785065025
+OWNER=1785065025 1966867320
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
@@ -47,7 +47,7 @@ FCHANNEL_STAT=
 DUMP_LEECH=False
 
 # Always deploy latest version of repo during startup // Off by default set to True to enable 
-#ALWAYS_DEPLOY_LATEST=
+ALWAYS_DEPLOY_LATEST=True
 
 # Lock encoding on startup
 #LOCK_ON_STARTUP=
@@ -57,4 +57,4 @@ DUMP_LEECH=False
 
 # if not added defaults to original repo
 UPSTREAM_REPO=https://github.com/Salxchange/FZX-Super-Encoder
-UPSTREAM_BRANCH=FZX-
+UPSTREAM_BRANCH=FZX-480p
