--- a/.env
+++ b/.env
@@ -47,7 +47,7 @@ FCHANNEL_STAT=6
 DUMP_LEECH=False
 
 # Always deploy latest version of repo during startup // Off by default set to True to enable 
-#ALWAYS_DEPLOY_LATEST=
+ALWAYS_DEPLOY_LATEST=True
 
 # Lock encoding on startup
 #LOCK_ON_STARTUP=
