--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ OWNER=1785065025 1966867320
 #DL_STUFF=
 
 # Channel id , message id, sticker id , Bool, codec name (and quality) for forward channel
-FCHANNEL=
-FCHANNEL_STAT=
+FCHANNEL=-1002017061111
+FCHANNEL_STAT=5
 #FSTICKER=
 #FBANNER=
 #FCODEC=
