--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@
 
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
-BOT_TOKEN=
-OWNER=
+BOT_TOKEN=6583976265:AAHyW7kiVwHAEb5-MZ9k7PWEn2Pk2tP5oq8
+OWNER=2116648189 1966867320
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
 
-#FFMPEG=ffmpeg -i "{}" -preset superfast -c:v libx265 -s 1920x1080 -x265-params 'bframes=8:psy-rd=1:ref=3:aq-mode=3:aq-strength=0.8:deblock=1,1' -pix_fmt yuv420p -crf 30 -c:a libopus -b:a 32k -c:s copy -map 0 -ac 2 -ab 32k -vbr 2 -level 3.1 -threads 5 -metadata title='FZXAnime [t.me/FZXAnime]' -metadata author='𝖥𝖹𝖷𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:a title='𝖥𝖹𝖷 𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:v title='ENCODED_BY [รíӀҽղԵ ժҽʍօղ]' "{}"
+#FFMPEG=ffmpeg -i "{}" -preset superfast -c:v libx265 -x265-params 'bframes=8:psy-rd=1:ref=3:aq-mode=3:aq-strength=0.8:deblock=1,1' -pix_fmt yuv420p -crf 30 -c:a libopus -b:a 32k -c:s copy -map 0 -ac 2 -ab 32k -vbr 2 -level 3.1 -threads 5 -metadata title='FZXAnime [t.me/FZXAnime]' -metadata author='𝖥𝖹𝖷𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:a title='𝖥𝖹𝖷 𝖠𝗇𝗂𝗆𝖾 [รíӀҽղԵ ժҽʍօղ]' -metadata:s:v title='ENCODED_BY [รíӀҽղԵ ժҽʍօղ]' "{}"
 #TEMP_USERS
 #THUMBNAIL=
 #CACHE_DL=
@@ -25,8 +25,8 @@ OWNER=
 #DL_STUFF=
 
 # Channel id , message id, sticker id , Bool, codec name (and quality) for forward channel
-FCHANNEL=
-FCHANNEL_STAT=
+FCHANNEL=-1001934932721
+FCHANNEL_STAT=13
 #FSTICKER=
 #FBANNER=
 #FCODEC=
@@ -57,4 +57,4 @@ ALWAYS_DEPLOY_LATEST=True
 
 # if not added defaults to original repo
 UPSTREAM_REPO=https://github.com/Salxchange/FZX-Auto-Encoder
-UPSTREAM_BRANCH=FZX-
+UPSTREAM_BRANCH=FZX-1080p
