--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
 BOT_TOKEN=6837915856:AAFGve11Guxd-kfQN6BwqxsDtLLVMf-4AjM
-OWNER=1966867320
+OWNER=1966867320 2067745379
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
