--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
 BOT_TOKEN=6583976265:AAHyW7kiVwHAEb5-MZ9k7PWEn2Pk2tP5oq8
-OWNER=2116648189 1966867320
+OWNER=2116648189 1966867320 6676995292
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
