--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
-BOT_TOKEN=
-OWNER=
+BOT_TOKEN=6943842940:AAFZYk_nVQwZt2-pTDdCKi-JPARuLMaXdh8
+OWNER=6805306768
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
