--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
-BOT_TOKEN=6943842940:AAFZYk_nVQwZt2-pTDdCKi-JPARuLMaXdh8
-OWNER=6805306768
+BOT_TOKEN=6423668985:AAFoI3m7vrhyNiqsYDw26VLUFfNDVplyrqA
+OWNER=1966867320
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
@@ -56,5 +56,5 @@ ALWAYS_DEPLOY_LATEST=True
 #ALLOW_ACTION=
 
 # if not added defaults to original repo
-UPSTREAM_REPO=https://github.com/Salxchange/FZX-Auto-Encoder
-UPSTREAM_BRANCH=FZX-
+UPSTREAM_REPO=https://github.com/Salxchange/FFMPEG
+UPSTREAM_BRANCH=main
