--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ OWNER=1966867320
 #DL_STUFF=
 
 # Channel id , message id, sticker id , Bool, codec name (and quality) for forward channel
-FCHANNEL=
-FCHANNEL_STAT=
+#FCHANNEL=
+#FCHANNEL_STAT=
 #FSTICKER=
 #FBANNER=
 #FCODEC=
