--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 APP_ID=7324525
 API_HASH=d28604398dc13af15dd108bb34a27a54
 BOT_TOKEN=6423668985:AAFoI3m7vrhyNiqsYDw26VLUFfNDVplyrqA
-OWNER=1966867320
+OWNER= "1966867320 6820572640"
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
